--- a/reality-switch/package.json
+++ b/reality-switch/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "image-map-resizer": "^1.0.10",
     "vue": "^3.5.13"
   },
   "devDependencies": {
