--- a/reality-switch/package.json
+++ b/reality-switch/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "image-map-resizer": "^1.0.10",
+    "pinia": "^2.3.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
